[metadata]
name = account
author = shiyukai

author_email = shiyukai@fnii.cn
classifier =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages = account

data_files =
    etc/account = etc/account/*

[entry_points]
console_scripts =
    account-api = account.server.api:main
    account-sync = account.server.sync:main
